[package]
name = "prism-cln"
version = "0.1.0"
edition = "2024"

[dependencies]
prism-core = { path = "../prism-core" }
cln-plugin = "0.1"
cln-rpc = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
thiserror = "1"
anyhow = "1"
async-trait = "0.1"
sha2 = "0.10"
uuid = { version = "1", features = ["v4"] }
log = "0.4"